--- a/Tutorial.WPF/Tutorial.WPF.csproj
+++ b/Tutorial.WPF/Tutorial.WPF.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Binance.Net" Version="6.12.0" />
+    <PackageReference Include="Binance.Net" Version="6.13.2" />
+    <PackageReference Include="LiveCharts.Wpf" Version="0.9.7" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf" Version="1.1.31" />
   </ItemGroup>
 
