--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,12 +15,10 @@ steps:
 - task: NuGetCommand@2
   inputs:
     restoreSolution: '$(solution)'
-
-- task: VSBuild@1
+- task: DotNetCoreCLI@2
   inputs:
-    solution: '$(solution)'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: 'build'
+    projects: '**/Wpf.COMPORT/Wpf.COMPORT.csproj'
 
 - task: VSTest@2
   inputs:
