--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -31,7 +31,7 @@ steps:
     publishWebProjects: false
     zipAfterPublish: false
     projects: '**/Wpf.COMPORT/Wpf.COMPORT.csproj'
-    arguments: '-c Release -r win-x64 --self-contained true -p:PublishSingleFile=true --output "Wpf.COMPORT\publish\"'
+    arguments: '-c Release -r win-x64 --self-contained true -p:PublishSingleFile=true --output "Wpf.COMPORT\bin\Release\net5.0-windows\publish\win-x64\"'
 
 - task: AdvancedInstaller@2
   inputs:
